Se agregan los controladores y modelos de atributo_ubicacion y valor_atributo_ubicacion
