# controllers/atributo_ubicacion.go
@@ -12,13 +12,13 @@ import (
 	"github.com/astaxie/beego"
 )
 
-// PersonaController operations for Persona
-type PersonaController struct {
+// AtributoUbicacionController operations for AtributoUbicacion
+type AtributoUbicacionController struct {
 	beego.Controller
 }
 
 // URLMapping ...
-func (c *PersonaController) URLMapping() {
+func (c *AtributoUbicacionController) URLMapping() {
 	c.Mapping("Post", c.Post)
 	c.Mapping("GetOne", c.GetOne)
 	c.Mapping("GetAll", c.GetAll)
@@ -28,15 +28,15 @@ func (c *PersonaController) URLMapping() {
 
 // Post ...
 // @Title Post
-// @Description create Persona
-// @Param	body		body 	models.Persona	true		"body for Persona content"
-// @Success 201 {int} models.Persona
+// @Description create AtributoUbicacion
+// @Param	body		body 	models.AtributoUbicacion	true		"body for AtributoUbicacion content"
+// @Success 201 {int} models.AtributoUbicacion
 // @Failure 403 body is empty
 // @router / [post]
-func (c *PersonaController) Post() {
-	var v models.Persona
+func (c *AtributoUbicacionController) Post() {
+	var v models.AtributoUbicacion
 	if err := json.Unmarshal(c.Ctx.Input.RequestBody, &v); err == nil {
-		if _, err := models.AddPersona(&v); err == nil {
+		if _, err := models.AddAtributoUbicacion(&v); err == nil {
 			c.Ctx.Output.SetStatus(201)
 			c.Data["json"] = v
 		} else {
@@ -54,15 +54,15 @@ func (c *PersonaController) Post() {
 
 // GetOne ...
 // @Title Get One
-// @Description get Persona by id
+// @Description get AtributoUbicacion by id
 // @Param	id		path 	string	true		"The key for staticblock"
-// @Success 200 {object} models.Persona
+// @Success 200 {object} models.AtributoUbicacion
 // @Failure 403 :id is empty
 // @router /:id [get]
-func (c *PersonaController) GetOne() {
+func (c *AtributoUbicacionController) GetOne() {
 	idStr := c.Ctx.Input.Param(":id")
 	id, _ := strconv.Atoi(idStr)
-	v, err := models.GetPersonaById(id)
+	v, err := models.GetAtributoUbicacionById(id)
 	if err != nil {
 		c.Data["json"] = models.Alert{Type: "error", Code: "E_400", Body: err.Error()}
 	} else {
@@ -71,53 +71,19 @@ func (c *PersonaController) GetOne() {
 	c.ServeJSON()
 }
 
-// GetFull ...
-// @Title GetFull
-// @Description get Full information of Persona by id
-// @Param	id	query	string	false	"Filter model by id"
-// @Param	userid	query	string	false	"Filter model by usuario"
-// @Success 200 {object} interface{}
-// @Failure 403 :id is empty
-// @router /full/ [get]
-func (c *PersonaController) GetFull() {
-	/*idStr := c.Ctx.Input.Param(":id")
-	id, _ := strconv.Atoi(idStr)*/
-	var id = 0
-	var uid = ""
-	id, _ = c.GetInt("id")
-	uid = c.GetString("userid")
-	if id != 0 && uid == "" {
-		v, err := models.GetPersonaByIdFull(id)
-		if err != nil {
-			c.Data["json"] = models.Alert{Type: "error", Code: "E_400", Body: err.Error()}
-		} else {
-			c.Data["json"] = v
-		}
-	} else if id == 0 && uid != "" {
-		v, err := models.GetPersonaByIdFull(uid)
-		if err != nil {
-			c.Data["json"] = models.Alert{Type: "error", Code: "E_400", Body: err.Error()}
-		} else {
-			c.Data["json"] = v
-		}
-	}
-
-	c.ServeJSON()
-}
-
 // GetAll ...
 // @Title Get All
-// @Description get Persona
+// @Description get AtributoUbicacion
 // @Param	query	query	string	false	"Filter. e.g. col1:v1,col2:v2 ..."
 // @Param	fields	query	string	false	"Fields returned. e.g. col1,col2 ..."
 // @Param	sortby	query	string	false	"Sorted-by fields. e.g. col1,col2 ..."
 // @Param	order	query	string	false	"Order corresponding to each sortby field, if single value, apply to all sortby fields. e.g. desc,asc ..."
 // @Param	limit	query	string	false	"Limit the size of result set. Must be an integer"
 // @Param	offset	query	string	false	"Start position of result set. Must be an integer"
-// @Success 200 {object} models.Persona
+// @Success 200 {object} models.AtributoUbicacion
 // @Failure 403
 // @router / [get]
-func (c *PersonaController) GetAll() {
+func (c *AtributoUbicacionController) GetAll() {
 	var fields []string
 	var sortby []string
 	var order []string
@@ -150,8 +116,7 @@ func (c *PersonaController) GetAll() {
 		for _, cond := range strings.Split(v, ",") {
 			kv := strings.SplitN(cond, ":", 2)
 			if len(kv) != 2 {
-				c.Data["json"] = models.Alert{Type: "error", Code: "E_400", Body: "Error: invalid query key/value pair"}
-
+				c.Data["json"] = models.Alert{Type: "error", Code: "S_400", Body: "Error: invalid query key/value pair"}
 				c.ServeJSON()
 				return
 			}
@@ -160,7 +125,7 @@ func (c *PersonaController) GetAll() {
 		}
 	}
 
-	l, err := models.GetAllPersona(query, fields, sortby, order, offset, limit)
+	l, err := models.GetAllAtributoUbicacion(query, fields, sortby, order, offset, limit)
 	if err != nil {
 		c.Data["json"] = models.Alert{Type: "error", Code: "E_400", Body: err.Error()}
 	} else {
@@ -171,18 +136,18 @@ func (c *PersonaController) GetAll() {
 
 // Put ...
 // @Title Put
-// @Description update the Persona
+// @Description update the AtributoUbicacion
 // @Param	id		path 	string	true		"The id you want to update"
-// @Param	body		body 	models.Persona	true		"body for Persona content"
-// @Success 200 {object} models.Persona
+// @Param	body		body 	models.AtributoUbicacion	true		"body for AtributoUbicacion content"
+// @Success 200 {object} models.AtributoUbicacion
 // @Failure 403 :id is not int
 // @router /:id [put]
-func (c *PersonaController) Put() {
+func (c *AtributoUbicacionController) Put() {
 	idStr := c.Ctx.Input.Param(":id")
 	id, _ := strconv.Atoi(idStr)
-	v := models.Persona{Id: id}
+	v := models.AtributoUbicacion{Id: id}
 	if err := json.Unmarshal(c.Ctx.Input.RequestBody, &v); err == nil {
-		if err := models.UpdatePersonaById(&v); err == nil {
+		if err := models.UpdateAtributoUbicacionById(&v); err == nil {
 			c.Ctx.Output.SetStatus(200)
 			c.Data["json"] = models.Alert{Type: "success", Code: "S_200", Body: v}
 		} else {
@@ -200,15 +165,16 @@ func (c *PersonaController) Put() {
 
 // Delete ...
 // @Title Delete
-// @Description delete the Persona
+// @Description delete the AtributoUbicacion
 // @Param	id		path 	string	true		"The id you want to delete"
 // @Success 200 {string} delete success!
 // @Failure 403 id is empty
 // @router /:id [delete]
-func (c *PersonaController) Delete() {
+func (c *AtributoUbicacionController) Delete() {
 	idStr := c.Ctx.Input.Param(":id")
 	id, _ := strconv.Atoi(idStr)
-	if err := models.DeletePersona(id); err == nil {
+	if err := models.DeleteAtributoUbicacion(id); err == nil {
+		c.Ctx.Output.SetStatus(200)
 		c.Data["json"] = models.Alert{Type: "success", Code: "S_200", Body: "OK"}
 	} else {
 		c.Data["json"] = models.Alert{Type: "error", Code: "E_400", Body: err.Error()}
