# models/valor_atributo_ubicacion.go
@@ -9,47 +9,46 @@ import (
 	"github.com/astaxie/beego/orm"
 )
 
-type UbicacionEnte struct {
-	Id                        int                        `orm:"column(id);pk"`
-	Lugar                     int                        `orm:"column(lugar)"`
-	Ente                      *Ente                      `orm:"column(ente);rel(fk)"`
-	TipoRelacionUbicacionEnte *TipoRelacionUbicacionEnte `orm:"column(tipo_relacion_ubicacion_ente);rel(fk)"`
-	Activo                    bool                       `orm:"column(activo)"`
+type ValorAtributoUbicacion struct {
+	Id                int                `orm:"column(id);pk"`
+	UbicacionEnte     *UbicacionEnte     `orm:"column(ubicacion_ente);rel(fk)"`
+	AtributoUbicacion *AtributoUbicacion `orm:"column(atributo_ubicacion);rel(fk)"`
+	Valor             string             `orm:"column(valor)"`
 }
 
-func (t *UbicacionEnte) TableName() string {
-	return "ubicacion_ente"
+func (t *ValorAtributoUbicacion) TableName() string {
+	return "valor_atributo_ubicacion"
 }
 
 func init() {
-	orm.RegisterModel(new(UbicacionEnte))
+	orm.RegisterModel(new(ValorAtributoUbicacion))
 }
 
-// AddUbicacionEnte insert a new UbicacionEnte into database and returns
+// AddValorAtributoUbicacion insert a new ValorAtributoUbicacion into database and returns
 // last inserted Id on success.
-func AddUbicacionEnte(m *UbicacionEnte) (id int64, err error) {
+func AddValorAtributoUbicacion(m *ValorAtributoUbicacion) (id int64, err error) {
 	o := orm.NewOrm()
 	id, err = o.Insert(m)
 	return
 }
 
-// GetUbicacionEnteById retrieves UbicacionEnte by Id. Returns error if
+// GetValorAtributoUbicacionById retrieves ValorAtributoUbicacion by Id. Returns error if
 // Id doesn't exist
-func GetUbicacionEnteById(id int) (v *UbicacionEnte, err error) {
+func GetValorAtributoUbicacionById(id int) (v *ValorAtributoUbicacion, err error) {
 	o := orm.NewOrm()
-	v = &UbicacionEnte{Id: id}
+	v = &ValorAtributoUbicacion{Id: id}
 	if err = o.Read(v); err == nil {
 		return v, nil
 	}
 	return nil, err
 }
 
-// GetAllUbicacionEnte retrieves all UbicacionEnte matches certain condition. Returns empty list if
+// GetAllValorAtributoUbicacion retrieves all ValorAtributoUbicacion matches certain condition. Returns empty list if
 // no records exist
-func GetAllUbicacionEnte(query map[string]string, fields []string, sortby []string, order []string,
+func GetAllValorAtributoUbicacion(query map[string]string, fields []string, sortby []string, order []string,
 	offset int64, limit int64) (ml []interface{}, err error) {
 	o := orm.NewOrm()
-	qs := o.QueryTable(new(UbicacionEnte))
+	qs := o.QueryTable(new(ValorAtributoUbicacion))
 	// query k=v
 	for k, v := range query {
 		// rewrite dot-notation to Object__Attribute
@@ -99,7 +98,7 @@ func GetAllUbicacionEnte(query map[string]string, fields []string, sortby []stri
 		}
 	}
 
-	var l []UbicacionEnte
+	var l []ValorAtributoUbicacion
 	qs = qs.OrderBy(sortFields...)
 	if _, err = qs.Limit(limit, offset).All(&l, fields...); err == nil {
 		if len(fields) == 0 {
@@ -122,11 +121,11 @@ func GetAllUbicacionEnte(query map[string]string, fields []string, sortby []stri
 	return nil, err
 }
 
-// UpdateUbicacionEnte updates UbicacionEnte by Id and returns error if
+// UpdateValorAtributoUbicacion updates ValorAtributoUbicacion by Id and returns error if
 // the record to be updated doesn't exist
-func UpdateUbicacionEnteById(m *UbicacionEnte) (err error) {
+func UpdateValorAtributoUbicacionById(m *ValorAtributoUbicacion) (err error) {
 	o := orm.NewOrm()
-	v := UbicacionEnte{Id: m.Id}
+	v := ValorAtributoUbicacion{Id: m.Id}
 	// ascertain id exists in the database
 	if err = o.Read(&v); err == nil {
 		var num int64
@@ -137,15 +136,15 @@ func UpdateUbicacionEnteById(m *UbicacionEnte) (err error) {
 	return
 }
 
-// DeleteUbicacionEnte deletes UbicacionEnte by Id and returns error if
+// DeleteValorAtributoUbicacion deletes ValorAtributoUbicacion by Id and returns error if
 // the record to be deleted doesn't exist
-func DeleteUbicacionEnte(id int) (err error) {
+func DeleteValorAtributoUbicacion(id int) (err error) {
 	o := orm.NewOrm()
-	v := UbicacionEnte{Id: id}
+	v := ValorAtributoUbicacion{Id: id}
 	// ascertain id exists in the database
 	if err = o.Read(&v); err == nil {
 		var num int64
-		if num, err = o.Delete(&UbicacionEnte{Id: id}); err == nil {
+		if num, err = o.Delete(&ValorAtributoUbicacion{Id: id}); err == nil {
 			fmt.Println("Number of records deleted in database:", num)
 		}
 	}
